# docs/swagger.json
@@ -10,13 +10,13 @@
         "version": "0.1"
     },
     "paths": {
-        "/user": {
+        "/product": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Product"
                 ],
                 "responses": {
                     "200": {
@@ -24,7 +24,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/api.UserDto"
+                                "$ref": "#/definitions/api.ProductDtoOut"
                             }
                         }
                     },
@@ -50,24 +50,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Product"
                 ],
                 "parameters": [
                     {
-                        "description": "User data",
-                        "name": "userDTO",
+                        "description": "Product data",
+                        "name": "productDTO",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.UserDto"
+                            "$ref": "#/definitions/api.ProductDtoIn"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.UserDto"
+                            "$ref": "#/definitions/api.ProductDtoOut"
                         }
                     },
                     "400": {
@@ -85,18 +85,18 @@
                 }
             }
         },
-        "/user/{id}": {
+        "/product/{id}": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Product"
                 ],
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User UUID",
+                        "description": "Product UUID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -106,7 +106,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.UserDto"
+                            "$ref": "#/definitions/api.ProductDtoOut"
                         }
                     },
                     "400": {
@@ -137,23 +137,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Product"
                 ],
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User UUID",
+                        "description": "Product UUID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "User data",
-                        "name": "userData",
+                        "description": "Product data",
+                        "name": "productData",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.UserDto"
+                            "$ref": "#/definitions/api.ProductDtoIn"
                         }
                     }
                 ],
@@ -161,7 +161,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.UserDto"
+                            "$ref": "#/definitions/api.ProductDtoOut"
                         }
                     },
                     "400": {
@@ -192,12 +192,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Product"
                 ],
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User UUID",
+                        "description": "Product UUID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -207,7 +207,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.UserDto"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -233,12 +233,35 @@
         }
     },
     "definitions": {
-        "api.UserDto": {
+        "api.ProductDtoIn": {
             "type": "object",
             "required": [
+                "description",
                 "name"
             ],
             "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.ProductDtoOut": {
+            "type": "object",
+            "required": [
+                "description",
+                "id",
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 }
